--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
-body {
-    background: rgb(99, 98, 98);
-  }
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
-h1{
-    font-family: Arial, Helvetica, sans-serif;
-    color: rgb(59, 11, 11);
-}  
+body{
+    background-color: rgb(84, 161, 197);
+    color: #ffffff;
+}
+
