--- a/style.css
+++ b/style.css
@@ -1,7 +1,43 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 body{
-    background-color: rgb(84, 161, 197);
+    margin: 0;
+}
+
+header{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 200px;
+    height: 100vh;
+    background-color: #b0e0e6;
+    padding-top: 20px;
+}
+
+.logo{
+    font-size: 32px;
+    margin-bottom: 20px;
+    padding: 20px;
+    text-decoration: none;
     color: #ffffff;
 }
+
+.navbar{
+    display: flex;
+    flex-direction: column;
+}
+
+.navbar a{
+    display: block;
+    color: #000000;
+    padding: 15px;
+    text-decoration: none;
+    font-size: 20px;
+}
+
+.navbar a:hover{
+    background-color: #696969;
+    color: #ffffff;
+}
+
 
