--- a/style.css
+++ b/style.css
@@ -62,4 +62,25 @@ p{
     line-height: 1.6;
 }
 
+#home{
+    border: 2px solid;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+}
+
+#about{
+    border: 3px solid;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+}
+
+#skills{
+    border: 4px solid;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+}
+
 
