--- a/style.css
+++ b/style.css
@@ -1,86 +1,92 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
-body{
+*{
     margin: 0;
-    height: 100vh;
-    display: flex;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Merriweather;
+}
+
+body{
+    color: #000000;
+    background-color: #5a7854;
 }
 
 header{
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 200px;
-    height: 100vh;
-    background-color: #b0e0e6;
-    padding-top: 20px;
-    padding: 20px;
-    z-index: 10;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    justify-content: space-between;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 10%;
+    z-index: 100;
+    position: fixed;
 }
 
 .logo{
-    font-size: 32px;
-    margin-bottom: 20px;
-    padding: 20px;
+    font-size: 24px;
+    font-weight: 500;
     text-decoration: none;
-    color: #ffffff;
+    color: #000000;
 }
 
 .navbar{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
 
 .navbar a{
     display: block;
     color: #000000;
-    padding: 15px;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 18px;
+    font-weight: 500;
+    margin-left: 35px;
+    transition: .2s;
 }
 
 .navbar a:hover{
-    background-color: #696969;
-    color: #ffffff;
+    color: #f66f1d;
 }
 
-.main-content{
-    background-color: #ffffff;
+/*.main-content{
     padding: 20px;
-    max-width: 800px;
     margin: 20px auto;
     box-shadow: none;
+    overflow: hidden;
+    max-width: 600px;
 }
 
 h2{
     color: #000000;
+    display: flex;
+    align-items: center;
 }
 
 p{
     color: #000000;
     line-height: 1.6;
+    font-size: 16px;
+    margin: 20px 0 40px;
+    display: flex;
+    position: relative;
 }
 
-#home{
-    border: 2px solid;
-    padding: 20px;
-    margin-bottom: 20px;
-    border-radius: 8px;
-}
+/*section{
+    display: flex;
+    align-items: center;
+    height: 100vh;
+    padding: 0 10%;
+    max-width: 600px;
+    font-size: 16px;
+    margin: 20px 0 40px;
+}*/
 
-#about{
-    border: 3px solid;
-    padding: 20px;
-    margin-bottom: 20px;
-    border-radius: 8px;
-}
+/*#home, #about, #skills{
+    display: flex;
+    align-items: flex-start;
+   
+}*/
 
-#skills{
-    border: 4px solid;
-    padding: 20px;
-    margin-bottom: 20px;
-    border-radius: 8px;
-}
 
 
